<resources>
    <string name="app_name">Prilla</string>

    <string name="file_storage_backup">backup</string>

    <string name="server_login_success_endpoint">/</string>
    <string name="server_login_failure_endpoint">/login?error</string>
    <string name="server_login_endpoint">/login</string>
    <string name="server_add_entry_endpoint">/record</string>
    <string name="server_backup_endpoint">/download-backup</string>
    <string name="auth_cookie_name">JSESSIONID</string>

    <string name="server_label">Server URL</string>
    <string name="server_hint">https://example.com:1234</string>
    <string name="username_label">Username</string>
    <string name="username_hint">The web username</string>
    <string name="password_label">Password</string>
    <string name="password_hint">The web password</string>
    <string name="login_button_text">Log in</string>
    <string name="amount_label">Amount: %d</string>
    <string name="start_stop_button_start_text">Start</string>
    <string name="start_stop_button_stop_text">Stop (Hold to clear)</string>
    <string name="custom_start_link_text"><u>Set custom started date &amp; time</u></string>
    <string name="custom_stop_link_text"><u>Set custom stopped date &amp; time</u></string>
    <string name="last_entry_text">Last entry: %1$s to %2$s</string>
    <string name="started_at_text">Started at: %1$s</string>

    <string name="entry_added_message">Entry added</string>
    <string name="entry_clear_message">Entry cleared</string>
    <string name="invalid_credentials_error_title">Invalid Credentials</string>
    <string name="invalid_credentials_error_message">Invalid username or password, check them and try again</string>
    <string name="session_expired_error_title">Session Expired</string>
    <string name="session_expired_error_message">Your login session has expired, please log in again</string>
    <string name="malformed_url_title">Invalid URL</string>
    <string name="malformed_url_message">The server URL was invalid. Please check that it starts with http(s)://</string>
    <string name="handshake_error_title">Network Error</string>
    <string name="handshake_error_message">Server refused client\'s TLS/SSL certificates</string>
    <string name="network_error_title">Network Error</string>
    <string name="network_error_message">Could not communicate with server. Check the server URL and try again</string>
    <string name="backup_complete_message">Successfully backed up data</string>
    <string name="backup_unsupported_message">Backup unsupported</string>
    <string name="backup_io_error">Backup IO error</string>
    <string name="backup_permission_required_banner_message">Prilla currently lacks permissions to make regular backups.</string>
    <string name="backup_permission_required_banner_setup">Setup Backups</string>
    <string name="backup_permission_required_banner_dismiss">Dismiss</string>
    <string name="backup_setup_title">Setup Backups</string>
    <string name="backup_setup_message">Prilla needs access to a folder where backups will be stored.</string>
    <string name="backup_setup_confirm">Select Folder</string>
    <string name="backup_setup_cancel">Cancel</string>

    <string name="date_picker_tag">datepicker</string>
    <string name="time_picker_tag">timepicker</string>
    <string name="error_dialog_tag">errordialog</string>
    <string name="backup_setup_dialog_tag">backupsetup</string>
</resources>